crates/macro/ui-tests/unsupported-options.stderr
error[E0277]: JavaScript constructors are not supported for `RustEnum`
  --> ui-tests/unsupported-options.rs:56:12
   |
56 |     pub fn new() -> Self {
   |            ^^^ this function cannot be the constructor of `RustEnum`
   |
   = help: the trait `SupportsConstructor` is not implemented for `RustEnum`
   = note: `#[wasm_bindgen(constructor)]` is generally only supported for `struct`s with `#[wasm_bindgen]` and cannot be used for `enum`s.
   = note: Consider removing the `constructor` option and using a regular static method instead.
   = help: the trait `SupportsConstructor` is implemented for `RustStruct`
note: required by a bound in `__wasm_bindgen_generated_RustEnum_new::_::assert_supports_constructor`
  --> ui-tests/unsupported-options.rs:49:1
   |
49 | #[wasm_bindgen]
   | ^^^^^^^^^^^^^^^ required by this bound in `assert_supports_constructor`
   = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: JavaScript instance getters and setters are not supported for `RustEnum`
  --> ui-tests/unsupported-options.rs:61:12
   |
61 |     pub fn prop(self) -> u32 {
   |            ^^^^ this method cannot be a getter or setter for `RustEnum`
   |
   = help: the trait `SupportsInstanceProperty` is not implemented for `RustEnum`
   = note: `#[wasm_bindgen(getter)]` and `#[wasm_bindgen(setter)]` are generally only supported for `struct`s with `#[wasm_bindgen]`. They cannot be used for `enum`s.
   = help: the trait `SupportsInstanceProperty` is implemented for `RustStruct`
note: required by a bound in `__wasm_bindgen_generated_RustEnum_prop::_::assert_supports_instance_property`
  --> ui-tests/unsupported-options.rs:49:1
   |
49 | #[wasm_bindgen]
   | ^^^^^^^^^^^^^^^ required by this bound in `assert_supports_instance_property`
   = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: JavaScript instance getters and setters are not supported for `RustEnum`
  --> ui-tests/unsupported-options.rs:65:12
   |
65 |     pub fn set_prop(self, _value: u32) {}
   |            ^^^^^^^^ this method cannot be a getter or setter for `RustEnum`
   |
   = help: the trait `SupportsInstanceProperty` is not implemented for `RustEnum`
   = note: `#[wasm_bindgen(getter)]` and `#[wasm_bindgen(setter)]` are generally only supported for `struct`s with `#[wasm_bindgen]`. They cannot be used for `enum`s.
   = help: the trait `SupportsInstanceProperty` is implemented for `RustStruct`
note: required by a bound in `__wasm_bindgen_generated_RustEnum_set_prop::_::assert_supports_instance_property`
  --> ui-tests/unsupported-options.rs:49:1
   |
49 | #[wasm_bindgen]
   | ^^^^^^^^^^^^^^^ required by this bound in `assert_supports_instance_property`
   = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: JavaScript static getters and setters are not supported for `RustEnum`
  --> ui-tests/unsupported-options.rs:68:12
   |
68 |     pub fn static_prop() -> u32 {
   |            ^^^^^^^^^^^ this static function cannot be a static getter or setter on `RustEnum`
   |
   = help: the trait `SupportsStaticProperty` is not implemented for `RustEnum`
   = note: `#[wasm_bindgen(getter)]` and `#[wasm_bindgen(setter)]` are generally only supported for `struct`s with `#[wasm_bindgen]`. They cannot be used for `enum`s.
   = help: the trait `SupportsStaticProperty` is implemented for `RustStruct`
note: required by a bound in `__wasm_bindgen_generated_RustEnum_static_prop::_::assert_supports_static_property`
  --> ui-tests/unsupported-options.rs:49:1
   |
49 | #[wasm_bindgen]
   | ^^^^^^^^^^^^^^^ required by this bound in `assert_supports_static_property`
   = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: JavaScript static getters and setters are not supported for `RustEnum`
  --> ui-tests/unsupported-options.rs:72:12
   |
72 |     pub fn set_static_prop(_value: u32) {}
   |            ^^^^^^^^^^^^^^^ this static function cannot be a static getter or setter on `RustEnum`
   |
   = help: the trait `SupportsStaticProperty` is not implemented for `RustEnum`
   = note: `#[wasm_bindgen(getter)]` and `#[wasm_bindgen(setter)]` are generally only supported for `struct`s with `#[wasm_bindgen]`. They cannot be used for `enum`s.
   = help: the trait `SupportsStaticProperty` is implemented for `RustStruct`
note: required by a bound in `__wasm_bindgen_generated_RustEnum_set_static_prop::_::assert_supports_static_property`
  --> ui-tests/unsupported-options.rs:49:1
   |
49 | #[wasm_bindgen]
   | ^^^^^^^^^^^^^^^ required by this bound in `assert_supports_static_property`
   = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)
